--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+openssl (1.0.1q-1.syslogng50.12) syslogngdeps50; urgency=medium
+
+  * upgraded to upstream (1.0.1q; sec. advisory [03 Dec 2015])
+
+ -- Balazs Benedek <balazs.benedek@balabit.com>  Tue, 05 Jan 2016 17:19:31 +0100
+
 openssl (1.0.1p-1.syslogng50.11) syslogngdeps50; urgency=medium
 
   * upgraded to upstream (1.0.1p; sec. advisory [09 Jul 2015])
@@ -169,6 +175,6 @@ openssl-syslog-ng (0.9.8h-1) unstable; urgency=low
 
 openssl-syslog-ng (0.9.8h) unstable; urgency=low
 
-  * Initial tgz2build package. 
+  * Initial tgz2build package.
 
  -- ZorpOS Maintainers <zorpos@balabit.com>  Fri, 18 Jul 2008 15:47:20 +0200
