--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+openssl (1.0.2h-1.syslogng60.1) syslogng60.1; urgency=medium
+
+  * upgraded to OpenSSL 1.0.2h
+
+ -- lbudai <laszlo.budai@balabit.com>  Tue, 24 May 2016 14:28:25 +0200
+
 openssl (1.0.1e-1.syslogng52.4) syslogng52; urgency=medium
 
   * CVE-2014-0160
